# swconfig

./: Makefile  README.md  autogen.sh  configure.ac
debian/: changelog  control
src/: Makefile.am
